marcas sin reponsive

--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -62,17 +62,17 @@
     <main>
       <section>
         <div class="container">
-          <div class="row">
-            <div class="col">
-              <h1>NUESTRAS MARCAS</h1>
+          <div class="row my-4">
+            <div class="col borde-contenedor text-center">
+              <h1 class="borde">NUESTRAS MARCAS</h1>
             </div>
           </div>
           <!-- Aqui empiezan las cards, en cada fila puse dos columnas, y dentro de cada columna dos card de bootstrap -->
           <div class="row">
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/fender.jpg"
                       class="img-fluid rounded-start"
@@ -96,10 +96,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/squier.jpg"
                       class="img-fluid rounded-start"
@@ -125,10 +125,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col">
+            <div class="col my-4 marcas-centrado">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/beringer.png"
                       class="img-fluid rounded-start"
@@ -150,10 +150,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/gibson.jpg"
                       class="img-fluid rounded-start"
@@ -178,10 +178,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/korg.png"
                       class="img-fluid rounded-start"
@@ -204,10 +204,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/nord.png"
                       class="img-fluid rounded-start"
@@ -233,10 +233,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/rode.jpg"
                       class="img-fluid rounded-start"
@@ -261,10 +261,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/roland.jpg"
                       class="img-fluid rounded-start"
@@ -291,10 +291,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/saxo.png"
                       class="img-fluid rounded-start"
@@ -320,10 +320,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/shure.webp"
                       class="img-fluid rounded-start"
@@ -350,10 +350,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/tama.jpeg"
                       class="img-fluid rounded-start"
@@ -378,10 +378,10 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col my-4">
               <div class="card mb-3" style="max-width: 540px">
                 <div class="row g-0">
-                  <div class="col-md-4">
+                  <div class="col-md-4 marcas-centrado">
                     <img
                       src="../images/marcas/yamaha.webp"
                       class="img-fluid rounded-start"
