--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -59,12 +59,12 @@
         </div>
       </nav>
     </header>
-    <main class="contenedor-tienda">
+    <main>
       <!-- Seccion de tienda -->
       <section class="container-fluid">
         <div class="row my-4">
-          <div class="col text-center fw-bold tienda">
-            <h1 class="borde-tienda">TIENDA ONLINE</h1>
+          <div class="col text-center fw-bold borde-contenedor">
+            <h1 class="borde">TIENDA ONLINE</h1>
           </div>
         </div>
         <!-- Guitarras -->
