--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Musicalmente Vivo</title>
   </head>
-  <body>
+  <body class="body">
     <!-- Header y Nav -->
     <header>
       <nav class="navbar navbar-expand-lg">
@@ -38,7 +38,9 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../index.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./tienda.html">Tienda</a>
@@ -58,6 +60,60 @@
       </nav>
     </header>
     <main>
+      <section>
+        <div class="container my-4">
+          <form class="formulario-contenedor">
+            <div class="texto-contacto">
+              <h1 class="h1">CONTACTATE CON NOSOTROS</h1>
+              <p>
+                Tomamos cada mensaje como prioritario, <br />la respuesta puede
+                tardar hasta 24hs de recibido el mensaje <br />
+                Nos tomamos muy enserio la opionion de todos nuestros clientes.
+              </p>
+              <h4>Musicalmente Vivo</h4>
+            </div>
+            <div class="formulario-contacto bg-dark">
+              <label for="text" class="form-label mt-4 mb-2">Nombre</label>
+              <input
+                type="text"
+                class="form-control"
+                id="nombre"
+                placeholder="Escribe tu Nombre"
+              />
+              <label for="emailinput" class="form-label mt-4 mb-2">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="emailinput"
+                placeholder="Ingrese su correo"
+              />
+              <label for="telefonoinput" class="form-label mt-4 mb-2"
+                >Telefono</label
+              >
+              <input
+                type="number"
+                class="form-control"
+                id="telefonoinput"
+                placeholder="Ingrese su numero"
+              />
+              <label for="mensaje" class="form-label mt-4 mb-2"
+                >Deje su mensaje</label
+              >
+              <textarea
+                class="form-control"
+                name="mensaje"
+                id="mensaje"
+                cols="20"
+                rows="10"
+                placeholder="Escriba su mensaje aqui"
+              ></textarea>
+              <button type="button" class="btn btn-primary mt-4">
+                Enviar Mensaje
+              </button>
+            </div>
+          </form>
+        </div>
+      </section>
       <!-- Footer -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
