--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Conocenos</title>
   </head>
-  <body>
+  <body class="body">
     <!-- Header y Nav -->
     <header>
       <nav class="navbar navbar-expand-lg">
@@ -38,7 +38,9 @@
           >
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link" aria-current="page" href="../index.html"
+                  >Inicio</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./tienda.html">Tienda</a>
@@ -58,6 +60,30 @@
       </nav>
     </header>
     <main>
+      <section>
+        <div class="container">
+          <div class="row my-4">
+            <div class="col my-4">
+              <div>
+                <h2>MUSICALMENTE VIVO</h2>
+                <h3>Con la musica en las venas</h3>
+                <p>
+                  Somos una empresa muy comprometida en cumplir con los
+                  estandares musicales de nuestros clientes.
+                </p>
+                <h6>ESTAMOS PARA HACER TUS SUEÑOS MUSICALES REALIDAD</h6>
+              </div>
+            </div>
+            <div class="col my-4">
+              <div>
+                <video width= "100%"  height="100%" autoplay muted controls loop>
+                  <source src="../videos/tienda.mp4" type="video/mp4">
+                </video>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- Footer -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
