--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -60,18 +60,21 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="nosotros-contenedor">
         <div class="container">
           <div class="row my-4">
             <div class="col my-4">
               <div>
                 <h2>MUSICALMENTE VIVO</h2>
+                <br>
+                <div class="nosotros-texto">
                 <h3>Con la musica en las venas</h3>
                 <p>
                   Somos una empresa muy comprometida en cumplir con los
                   estandares musicales de nuestros clientes.
                 </p>
                 <h6>ESTAMOS PARA HACER TUS SUEÑOS MUSICALES REALIDAD</h6>
+                </div>
               </div>
             </div>
             <div class="col my-4">
