--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
       </section>
       <!-- Cards de sugerencias -->
-      <section>
+      <section class="cards-secciones">
         <div class="container my-4">
           <div class="row">
             <div class="col text-end mt-4">
