Media query marcas

--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -69,8 +69,8 @@
           </div>
           <!-- Aqui empiezan las cards, en cada fila puse dos columnas, y dentro de cada columna dos card de bootstrap -->
           <div class="row">
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card uno mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -96,8 +96,8 @@
                 </div>
               </div>
             </div>
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card uno mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -125,8 +125,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col my-4 marcas-centrado">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4 marcas-centrado">
+              <div class="card dos mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -150,8 +150,8 @@
                 </div>
               </div>
             </div>
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card dos mb-3" style="max-width: 100%;" >
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -178,8 +178,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card tres mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -204,8 +204,8 @@
                 </div>
               </div>
             </div>
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card tres mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -233,8 +233,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card cuatro mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -261,8 +261,8 @@
                 </div>
               </div>
             </div>
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card cuatro mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -291,8 +291,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -320,8 +320,8 @@
                 </div>
               </div>
             </div>
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -350,8 +350,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
@@ -378,8 +378,8 @@
                 </div>
               </div>
             </div>
-            <div class="col my-4">
-              <div class="card mb-3" style="max-width: 540px">
+            <div class="col-sm-6 col-md-6 my-4">
+              <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
