--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -69,7 +69,7 @@
           </div>
           <!-- Aqui empiezan las cards, en cada fila puse dos columnas, y dentro de cada columna dos card de bootstrap -->
           <div class="row">
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card uno mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -96,7 +96,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card uno mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6 col-md-6 my-4 marcas-centrado">
+            <div class="col-sm-6 col-md-6 my-4 marcas-centrado card-contenedor">
               <div class="card dos mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -150,7 +150,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card dos mb-3" style="max-width: 100%;" >
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -178,7 +178,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card tres mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -204,7 +204,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card tres mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -233,7 +233,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card cuatro mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -261,7 +261,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card cuatro mb-3">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -291,7 +291,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -320,7 +320,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -350,7 +350,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -378,7 +378,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-6 my-4">
+            <div class="col-sm-6 col-md-6 my-4 card-contenedor">
               <div class="card cuatro mb-3" style="max-width: 540px">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
@@ -412,7 +412,7 @@
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
-            <div class="col mt-3">
+            <div class="col-sm-12 col-md-6 mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 CONTACTO
               </h5>
@@ -440,7 +440,7 @@
                 +549 0223-6821945
               </p>
             </div>
-            <div class="col text-end mt-3">
+            <div class="col-sm-12 col-md-6 text-end mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 NUESTRAS REDES
               </h5>
