--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -63,7 +63,7 @@
       <section class="nosotros-contenedor">
         <div class="container">
           <div class="row my-4">
-            <div class="col my-4">
+            <div class="col-sm-12 col-md-6 my-4 nosotros">
               <div>
                 <h2>MUSICALMENTE VIVO</h2>
                 <br>
@@ -77,7 +77,7 @@
                 </div>
               </div>
             </div>
-            <div class="col my-4">
+            <div class="col-sm-12 col-md-6 my-4">
               <div>
                 <video width= "100%"  height="100%" autoplay muted controls loop>
                   <source src="../videos/tienda.mp4" type="video/mp4">
@@ -91,7 +91,7 @@
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
-            <div class="col mt-3">
+            <div class="col-sm-12 col-md-6 mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 CONTACTO
               </h5>
@@ -119,7 +119,7 @@
                 +549 0223-6821945
               </p>
             </div>
-            <div class="col text-end mt-3">
+            <div class="col-sm-12 col-md-6 text-end mt-3">
               <h5 class="text-uppercase mb-4 font-weight-bold text-primary">
                 NUESTRAS REDES
               </h5>
