Finalizacion para el tercer pre-entregable

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Musicalmente Vivo</title>
   </head>
   <body class="body">
-    <!-- Header y Nav -->
+    <!-- Header y Nav de bootstrap-->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -60,7 +60,7 @@
       </nav>
     </header>
     <main>
-      <!-- Encabezados -->
+      <!-- Encabezados editados con bootstrap-->
       <div class="container my-3">
         <div class="row">
           <div class="col text-center">
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-      <!-- Carrousel de imagenes -->
+      <!-- Aca esta el carrousel de imagenes echo con boostrap y editado para responsive -->
       <section class="container">
         <div id="carouselExample" class="carousel slide">
           <div class="row">
@@ -156,7 +156,7 @@
           </div>
         </div>
       </section>
-      <!-- Cards de sugerencias -->
+      <!-- Aqui se encuentran las cards, son 3, las imagenes no quedaron muy bien. -->
       <section class="cards-secciones">
         <div class="container my-4">
           <div class="row">
@@ -228,7 +228,7 @@
           </div>
         </div>
       </section>
-      <!-- Footer -->
+      <!-- El footer esta echo con clases de bootstrap, todo esto lo realice con muy poco tiempo por mi trabajo -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
