--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -14,7 +14,7 @@
     <title>Marcas</title>
   </head>
   <body>
-    <!-- Header y Nav -->
+    <!-- Header y Nav idem index -->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -81,6 +81,7 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
+                      <!-- Intente mostrar una cara distinta de las tiendas convensionales, dando informacion de cada marca en especifico -->
                       <h5 class="card-title">Fender®</h5>
                       <p class="card-text">
                         Es una de las marcas Top del mercado, abarca dese
