--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,7 +14,7 @@
     <title>Conocenos</title>
   </head>
   <body class="body">
-    <!-- Header y Nav -->
+    <!-- Header y Nav idem index-->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -60,6 +60,7 @@
       </nav>
     </header>
     <main>
+      <!-- En este html, solo agregue poca informacion, me parecio mas sencillo, a parte por la falta de tiempo que tube -->
       <section class="nosotros-contenedor">
         <div class="container">
           <div class="row my-4">
@@ -77,6 +78,8 @@
                 </div>
               </div>
             </div>
+            <!-- Agregue un video de una tienda externa, y lo recorte para que no se vea el nombre de la tienda original, le saque el sonido para que se pudiera reproducir en autoplay
+            y deje la opcion de "controls" para que tengan la opcion de ponerle el sonido -->
             <div class="col-sm-12 col-md-6 my-4">
               <div>
                 <video width= "100%"  height="100%" autoplay muted controls loop>
