--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
     <title>Musicalmente Vivo</title>
   </head>
   <body class="body">
-    <!-- Header y Nav -->
+    <!-- Header y Nav idem al index -->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -60,6 +60,7 @@
       </nav>
     </header>
     <main>
+      <!-- En este html encontraran solo un texto y un formulario, lo trabaje lo mas que pude en el tiempo que tube -->
       <section class="contacto-cont">
         <div class="container my-4">
           <div class="row">
@@ -75,6 +76,7 @@
           </div>
           <div class="row">
             <div class="col">
+              <!-- El formulario me quedo en la pantalla de pc, no pude econtrar la forma aun de que me quede mas chico en desktop -->
               <form class="formulario-contenedor">
                 <div class="formulario-contacto bg-dark">
                   <label for="text" class="form-label mt-4 mb-2">Nombre</label>
@@ -122,7 +124,7 @@
           </div>
         </div>
       </section>
-      <!-- Footer -->
+      <!-- Footer idem index -->
       <footer class="bg-dark text-light pt-5 pb-4">
         <div class="container">
           <div class="row">
