--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -14,7 +14,7 @@
     <title>Tu tienda online favorita</title>
   </head>
   <body>
-    <!-- Header & Nav -->
+    <!-- Header & Nav idem index -->
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -60,14 +60,14 @@
       </nav>
     </header>
     <main>
-      <!-- Seccion de tienda -->
+      <!-- Seccion de tienda convensional, me guie por una pagina de Fender-->
       <section class="container-fluid">
         <div class="row my-4">
           <div class="col text-center fw-bold borde-contenedor">
             <h1 class="borde">TIENDA ONLINE</h1>
           </div>
         </div>
-        <!-- Guitarras -->
+        <!-- Pueden notar que acomode las secciones por instrumentos -->
         <div class="row">
           <div class="col text-start">
             <h4 class="borde-secciones">GUITARRAS</h4>
