--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,10 +10,22 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Fuente de GogleFonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Animate css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Musicalmente Vivo</title>
   </head>
-  <body class="body">
+  <body class="body-contacto">
     <!-- Header y Nav idem al index -->
     <header>
       <nav class="navbar navbar-expand-lg">
@@ -61,65 +73,51 @@
     </header>
     <main>
       <!-- En este html encontraran solo un texto y un formulario, lo trabaje lo mas que pude en el tiempo que tube -->
-      <section class="contacto-cont">
-        <div class="container my-4">
-          <div class="row">
-            <div class="col texto-contacto text-center">
-              <h1 class="h1">CONTACTATE CON NOSOTROS</h1>
-              <p>
-                Tomamos cada mensaje como prioritario, <br />la respuesta puede
-                tardar hasta 24hs de recibido el mensaje <br />
-                Nos tomamos muy enserio la opionion de todos nuestros clientes.
-              </p>
-              <h4>Musicalmente Vivo</h4>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col">
-              <!-- El formulario me quedo en la pantalla de pc, no pude econtrar la forma aun de que me quede mas chico en desktop -->
-              <form class="formulario-contenedor">
-                <div class="formulario-contacto bg-dark">
-                  <label for="text" class="form-label mt-4 mb-2">Nombre</label>
+      <section class="contacto">
+        <div class="content">
+          <h1 class="contacto-titulo">Contactate con <span>Nosotros</span></h1>
+          <div class="formulario-card">
+            <div class="formulario-contacto">
+              <h3>Contactanos</h3>
+              <form action="">
+                <p>
+                  <label for="Nombrecompleto">Nombre Completo</label>
                   <input
                     type="text"
-                    class="form-control"
-                    id="nombre"
-                    placeholder="Escribe tu Nombre"
+                    name="Nombrecompleto"
+                    id="Nombrecompleto"
                   />
-                  <label for="emailinput" class="form-label mt-4 mb-2"
-                    >Email</label
-                  >
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="emailinput"
-                    placeholder="Ingrese su correo"
-                  />
-                  <label for="telefonoinput" class="form-label mt-4 mb-2"
-                    >Telefono</label
-                  >
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="telefonoinput"
-                    placeholder="Ingrese su numero"
-                  />
-                  <label for="mensaje" class="form-label mt-4 mb-2"
-                    >Deje su mensaje</label
-                  >
-                  <textarea
-                    class="form-control"
-                    name="mensaje"
-                    id="mensaje"
-                    cols="20"
-                    rows="10"
-                    placeholder="Escriba su mensaje aqui"
-                  ></textarea>
-                  <button type="button" class="btn btn-primary mt-4">
-                    Enviar Mensaje
-                  </button>
-                </div>
+                </p>
+                <p>
+                  <label>Email</label>
+                  <input type="email" name="email" />
+                </p>
+                <p>
+                  <label>Telefono</label>
+                  <input type="tel" name="telefono" />
+                </p>
+                <p>
+                  <label>Ciudad</label>
+                  <input type="text" name="ciudad" />
+                </p>
+                <p class="block">
+                  <label>Mensaje</label>
+                  <textarea name="mensaje" rows="10"></textarea>
+                </p>
+                <p class="block">
+                  <button type="submit">Enviar</button>
+                </p>
               </form>
+            </div>
+            <div class="contacto-texto">
+              <h4>Mas info</h4>
+              <p>
+                En musicalmente vivo, estamos para ayudarte en todo lo que
+                necesites con respecto a nuestros productos. Normalemnte
+                respondemos dentro de las 24hs de enviada la consulta. Siganos
+                en nuestras redes sociales para obtener mas informacion, y
+                enterarte de todas las novedades que rodean al mundo musical.
+              </p>
             </div>
           </div>
         </div>
