--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Descubre una amplia selección de instrumentos musicales en nuestra tienda en línea. Encuentra todo lo que necesitas para tu pasión por la música, desde guitarras y pianos hasta baterías y equipos de sonido. Ofrecemos productos de alta calidad de las mejores marcas del mercado, garantizando la excelencia en cada nota. ¡Explora nuestro catálogo y deja que la música sea tu inspiración! Compra fácilmente con envío rápido y atención al cliente excepcional. ¡Haz realidad tus sueños musicales con nosotros!"
+    />
+    <meta
+      name="keywords"
+      content="Instrumentos musicales, tienda de instrumentos musicales, comprar instrumentos musicales, tienda online de instrumentos musicales, instrumentos musicales baratos, instrumentos musicales de calidad, instrumentos musicales nuevos, instrumentos musicales usados, guitarras, bajos, baterias, pianos, teclados, saxofones, amplificadores, microfonos, pedales de efecto, accesorios para instrumentos musicales, partituras, acordes, equipo de grabacion musical, cuerdas, la mejor tienda musical, la tienda de musica mas barata, guitarras de calidad, instrumentos baratos,"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Musicalmente Vivo</title>
+    <title>Encuentra los mejores instrumentos en nuestra tienda musical, el perfecto equilibrio economico entre calidad y sonido</title>
   </head>
   <body class="body">
     <!-- Header y Nav de bootstrap-->
