--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contacte con la mejor tienda musical del mundo, respondemos todas las consultas por que nos interesan nuestro clientes. Manda tu mensaje de forma segura.">
+    <meta name="keywords" content="tienda de instrumentos musicales, contacto, instrumentos musicales, contacto de tienda musical, asesoramiento musical, soporte al cliente de instrumentos musicales, consultas sobre instrumentos musicales, reparacion de instrumentos musicales, instrumento perfecto, tienda de musica online, envio rapido de instrumentos musicales, respuesta rapida, preguntas frecuentes de instrumentos musicales, mensaje">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +25,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Musicalmente Vivo</title>
+    <title>Ponte en contacto con la tienda musical, Musicalmente vivo, y enterate de todas las novedades que tenemos para tus instrumentos musicales</title>
   </head>
   <body class="body-contacto">
     <!-- Header y Nav idem al index -->
