--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="En nuestra tienda musical tenemos las mejores marcas de instrumentos musicales, las mejores marcas en calidad precio, primeras marcas en nuestra tienda musical"
+    />
+    <meta
+      name="keywords"
+      content="marcas de instrumentos musicales, primeras marcas de instrumentos musicales, segundas marcas de instrumentos musicales, mejores marcas de instrumentos musicales, marcas de instrumentos musicales calidad precio, marcas de guitarras, marcas de bajo, marcas de baterias, marcas de piano, marcas de teclado, marcas de microfonos, marcas de saxofones, marcas de cuerdas, marcas de amplificadores, marcas de pedales de efecto, marcas de pedaleras digitales"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Marcas</title>
+    <title>Las mejores marcas de instrumentos musicales estan en nuestra tienda Musicalmente vivo, primeras y segundas marcas de instrumentos musicales aqui</title>
   </head>
   <body>
     <!-- Header y Nav idem index -->
@@ -152,7 +160,7 @@
               </div>
             </div>
             <div class="col-sm-6 col-md-6 my-4 card-contenedor">
-              <div class="card dos mb-3" style="max-width: 100%;" >
+              <div class="card dos mb-3" style="max-width: 100%">
                 <div class="row g-0">
                   <div class="col-md-4 marcas-centrado">
                     <img
