--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Nuestra tienda musical tiene su propia historia, conocenos y ven a formar parte de nuestra familia musical"
+    />
+    <meta
+      name="keywords"
+      content="Historia tienda de instrumentos musicales, conoce la tienda de instrumentos musicales, musicalmente vivo, conoce a musicalmente vivo, conoce la mejor tienda de instrumentos musicales, nosotros tienda de instrumentos musicales"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +19,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Conocenos</title>
+    <title>Conoce nuestra tienda de instrumentos musicales</title>
   </head>
   <body class="body">
     <!-- Header y Nav idem index-->
@@ -67,14 +75,14 @@
             <div class="col-sm-12 col-md-6 my-4 nosotros">
               <div>
                 <h2>MUSICALMENTE VIVO</h2>
-                <br>
+                <br />
                 <div class="nosotros-texto">
-                <h3>Con la musica en las venas</h3>
-                <p>
-                  Somos una empresa muy comprometida en cumplir con los
-                  estandares musicales de nuestros clientes.
-                </p>
-                <h6>ESTAMOS PARA HACER TUS SUEÑOS MUSICALES REALIDAD</h6>
+                  <h3>Con la musica en las venas</h3>
+                  <p>
+                    Somos una empresa muy comprometida en cumplir con los
+                    estandares musicales de nuestros clientes.
+                  </p>
+                  <h6>ESTAMOS PARA HACER TUS SUEÑOS MUSICALES REALIDAD</h6>
                 </div>
               </div>
             </div>
@@ -82,8 +90,8 @@
             y deje la opcion de "controls" para que tengan la opcion de ponerle el sonido -->
             <div class="col-sm-12 col-md-6 my-4">
               <div>
-                <video width= "100%"  height="100%" autoplay muted controls loop>
-                  <source src="../videos/tienda.mp4" type="video/mp4">
+                <video width="100%" height="100%" autoplay muted controls loop>
+                  <source src="../videos/tienda.mp4" type="video/mp4" />
                 </video>
               </div>
             </div>
