--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Encuentra en nuestra tienda online los mejores instrumentos musicales, instrumentos musicales nuevos y usados, no te quedes sin comprar tu instrumento musical en Musicalmente vivo"
+    />
+    <meta
+      name="keywords"
+      content="La mejor tienda de instrumentos musicales, comrpar instrumentos musicales, venta de instrumentos musicales, venta de guitarras, venta de bajos electricos, venta de pianos, venta de microfonos, venta de baterias, venta de saxofones, venta de amplificadores, tu tienda musical, venta de instrumentos usados, venta de instrumentos nuevos"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,7 +19,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Tu tienda online favorita</title>
+    <title>
+      Tu tienda online de instrumentos musicales favorita, encuentra todo lo que
+      necesitas para que tu sueño se haga realidad
+    </title>
   </head>
   <body>
     <!-- Header & Nav idem index -->
@@ -74,7 +85,9 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/fender.webp"
@@ -96,7 +109,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/lespaul.png"
@@ -118,7 +133,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/yamaha.webp"
@@ -139,7 +156,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/criolla.jpg"
@@ -168,7 +187,9 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bajo-gibson.jpg"
@@ -190,7 +211,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bajo-yamaha.webp"
@@ -212,7 +235,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bateria-yamaha.webp"
@@ -233,7 +258,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/bateria-tama.jpg"
@@ -262,7 +289,9 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/korg.jpg"
@@ -283,7 +312,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/roland.jpg"
@@ -304,7 +335,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/sintetizadorPolv.jpg"
@@ -325,7 +358,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/nordwave.jpg"
@@ -354,7 +389,9 @@
           </div>
         </div>
         <div class="row mb-4">
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/shurei.webp"
@@ -375,7 +412,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/rode.jpg"
@@ -396,7 +435,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/saxofon.jpg"
@@ -417,7 +458,9 @@
               </div>
             </div>
           </div>
-          <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center">
+          <div
+            class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+          >
             <div class="card" style="width: 18rem">
               <img
                 src="../images/tienda/trompeta.jpg"
