Animaciones finales agregadas

--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -18,6 +18,10 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Las mejores marcas de instrumentos musicales estan en nuestra tienda Musicalmente vivo, primeras y segundas marcas de instrumentos musicales aqui</title>
   </head>
@@ -71,8 +75,8 @@
       <section>
         <div class="container">
           <div class="row my-4">
-            <div class="col borde-contenedor text-center">
-              <h1 class="borde">NUESTRAS MARCAS</h1>
+            <div class="col borde-contenedor m-4 text-center animate__animated animate__fadeInDown">
+              <h1 class="borde b-marcas">Nuestras <span>Marcas</span></h1>
             </div>
           </div>
           <!-- Aqui empiezan las cards, en cada fila puse dos columnas, y dentro de cada columna dos card de bootstrap -->
