--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -18,6 +18,12 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- Animaciones libreria AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>
       Tu tienda online de instrumentos musicales favorita, encuentra todo lo que
@@ -72,10 +78,18 @@
     </header>
     <main>
       <!-- Seccion de tienda convensional, me guie por una pagina de Fender-->
-      <section class="container-fluid">
+      <section class="container-fluid tienda-contenedor">
         <div class="row my-4">
-          <div class="col text-center fw-bold borde-contenedor">
-            <h1 class="borde">TIENDA ONLINE</h1>
+          <div
+            class="col text-center fw-bold tienda-titulo animate__animated animate__fadeInDown"
+          >
+            <h1 class="borde">Tienda <span>Online</span></h1>
+          </div>
+          <div>
+            <h3 class="texto-tienda text-muted">
+              Encuentra todo lo que buscas en nuestra Tienda, <br />
+              Un paso mas para cumplir tus sueños
+            </h3>
           </div>
         </div>
         <!-- Pueden notar que acomode las secciones por instrumentos -->
@@ -87,6 +101,7 @@
         <div class="row">
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -111,6 +126,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -135,6 +151,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -158,6 +175,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -189,6 +207,7 @@
         <div class="row">
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -213,6 +232,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -237,6 +257,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -260,6 +281,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -291,6 +313,7 @@
         <div class="row">
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -314,6 +337,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -337,6 +361,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -360,6 +385,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -391,6 +417,7 @@
         <div class="row mb-4">
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -414,6 +441,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -437,6 +465,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -460,6 +489,7 @@
           </div>
           <div
             class="col-xs-6 col-sm-6 col-md-6 col-lg-4 col-xl-3 mb-3 d-flex justify-content-center"
+            data-aos="zoom-in"
           >
             <div class="card" style="width: 18rem">
               <img
@@ -554,5 +584,9 @@
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
