--- a/index.html
+++ b/index.html
@@ -12,14 +12,24 @@
       name="keywords"
       content="Instrumentos musicales, tienda de instrumentos musicales, comprar instrumentos musicales, tienda online de instrumentos musicales, instrumentos musicales baratos, instrumentos musicales de calidad, instrumentos musicales nuevos, instrumentos musicales usados, guitarras, bajos, baterias, pianos, teclados, saxofones, amplificadores, microfonos, pedales de efecto, accesorios para instrumentos musicales, partituras, acordes, equipo de grabacion musical, cuerdas, la mejor tienda musical, la tienda de musica mas barata, guitarras de calidad, instrumentos baratos,"
     />
+    <!-- Link de animaciones -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <!-- Animaciones libreria AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Encuentra los mejores instrumentos en nuestra tienda musical, el perfecto equilibrio economico entre calidad y sonido</title>
+    <title>
+      Encuentra los mejores instrumentos en nuestra tienda musical, el perfecto
+      equilibrio economico entre calidad y sonido
+    </title>
   </head>
   <body class="body">
     <!-- Header y Nav de bootstrap-->
@@ -69,16 +79,20 @@
     </header>
     <main>
       <!-- Encabezados editados con bootstrap-->
-      <div class="container my-3">
+      <div class="container-index my-3">
         <div class="row">
           <div class="col text-center">
-            <h1 class="fw-bold">MUSICALMENTE VIVO</h1>
+            <h1 class="fw-bold animate__animated animate__fadeInDown">
+              Musicalmente <span>Vivo</span>
+            </h1>
           </div>
         </div>
         <div class="row">
           <div class="col">
             <h4 class="text-center">
-              <small class="h4 text-muted">Tu tienda favorita online </small>
+              <small class="h4 text-muted animate__animated animate__fadeInUp"
+                >Tu tienda favorita online
+              </small>
             </h4>
           </div>
         </div>
@@ -175,6 +189,10 @@
           <div class="row mb-4">
             <div
               class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center"
+              data-aos="fade-right"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine"
+              data-aos-duration="1000"
             >
               <div class="card" style="width: 18rem">
                 <img src="./images/bajo.jpg" class="card-img-top" alt="bajos" />
@@ -193,6 +211,9 @@
             </div>
             <div
               class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center"
+              data-aos="fade-down"
+              data-aos-easing="linear"
+              data-aos-duration="1000"
             >
               <div class="card" style="width: 18rem">
                 <img
@@ -213,6 +234,10 @@
             </div>
             <div
               class="col-sm-12 col-md-6 col-lg-4 mt-4 d-flex justify-content-center"
+              data-aos="fade-left"
+              data-aos-offset="300"
+              data-aos-easing="ease-in-sine"
+              data-aos-duration="1000"
             >
               <div class="card" style="width: 18rem">
                 <img
@@ -307,5 +332,9 @@
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
