--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contacte con la mejor tienda musical del mundo, respondemos todas las consultas por que nos interesan nuestro clientes. Manda tu mensaje de forma segura.">
-    <meta name="keywords" content="tienda de instrumentos musicales, contacto, instrumentos musicales, contacto de tienda musical, asesoramiento musical, soporte al cliente de instrumentos musicales, consultas sobre instrumentos musicales, reparacion de instrumentos musicales, instrumento perfecto, tienda de musica online, envio rapido de instrumentos musicales, respuesta rapida, preguntas frecuentes de instrumentos musicales, mensaje">
+    <meta
+      name="description"
+      content="Contacte con la mejor tienda musical del mundo, respondemos todas las consultas por que nos interesan nuestro clientes. Manda tu mensaje de forma segura."
+    />
+    <meta
+      name="keywords"
+      content="tienda de instrumentos musicales, contacto, instrumentos musicales, contacto de tienda musical, asesoramiento musical, soporte al cliente de instrumentos musicales, consultas sobre instrumentos musicales, reparacion de instrumentos musicales, instrumento perfecto, tienda de musica online, envio rapido de instrumentos musicales, respuesta rapida, preguntas frecuentes de instrumentos musicales, mensaje"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
+    />
+    <!-- link de animaciones -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <!-- Fuente de GogleFonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,7 +36,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link rel="stylesheet" href="../css/styles.css" />
-    <title>Ponte en contacto con la tienda musical, Musicalmente vivo, y enterate de todas las novedades que tenemos para tus instrumentos musicales</title>
+    <title>
+      Ponte en contacto con la tienda musical, Musicalmente vivo, y enterate de
+      todas las novedades que tenemos para tus instrumentos musicales
+    </title>
   </head>
   <body class="body-contacto">
     <!-- Header y Nav idem al index -->
@@ -78,7 +92,7 @@
       <section class="contacto">
         <div class="content">
           <h1 class="contacto-titulo">Contactate con <span>Nosotros</span></h1>
-          <div class="formulario-card">
+          <div class="formulario-card animate__animated animate__backInLeft">
             <div class="formulario-contacto">
               <h3>Contactanos</h3>
               <form action="">
