--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,6 +18,12 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <!-- Animaciones libreria AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>Conoce nuestra tienda de instrumentos musicales</title>
   </head>
@@ -70,6 +76,12 @@
     <main>
       <!-- En este html, solo agregue poca informacion, me parecio mas sencillo, a parte por la falta de tiempo que tube -->
       <section class="nosotros-contenedor">
+        <div class="animate__animated animate__fadeInDown">
+          <h1 class="nosotros-titulo">
+            CONOCENOS<br />
+            <span>Visitando nuestras tiendas oficiales</span>
+          </h1>
+        </div>
         <div class="container">
           <div class="row my-4">
             <div class="col-sm-12 col-md-6 my-4 nosotros">
@@ -88,7 +100,10 @@
             </div>
             <!-- Agregue un video de una tienda externa, y lo recorte para que no se vea el nombre de la tienda original, le saque el sonido para que se pudiera reproducir en autoplay
             y deje la opcion de "controls" para que tengan la opcion de ponerle el sonido -->
-            <div class="col-sm-12 col-md-6 my-4">
+            <div class="col-sm-12 col-md-6 my-4" data-aos="fade-left"
+            data-aos-offset="300"
+            data-aos-easing="ease-in-sine"
+            data-aos-duration="1000">
               <div>
                 <video width="100%" height="100%" autoplay muted controls loop>
                   <source src="../videos/tienda.mp4" type="video/mp4" />
@@ -169,5 +184,9 @@
       src="https://kit.fontawesome.com/d4f42c1740.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
